kyy-k8s-config/src/staging/backend/chatbot-client/chatbot-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: chatbot
  name: chatbot
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
        - env:
            - name: APP_DEBUG
              value: "false"
            - name: DB_DATABASE
              value: chatbot
            - name: DB_HOST
              value: 10.25.80.149
            - name: DB_PASSWORD
              value: Nd1Gt6IgddAu
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: root
            - name: DOCUMENTROOT
              value: /var/www/html
          image: registry.cn-qingdao.aliyuncs.com/kaoyaya/chatbot
          name: chatbot
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
