kyy-k8s-config/src/staging/backend/chatbot-client/chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatbot
  name: chatbot
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: chatbot
